# app/Http/Controllers/Swagger/PostController.php
@@ -9,6 +9,7 @@ use Illuminate\Routing\Controller;
  *     path="/api/posts",
  *     summary="Get all posts",
  *     tags={"Post"},
+ *     security={{ "bearerAuth": {} }},
  *     @OA\Response(
  *         response=200,
  *         description="OK",
@@ -32,6 +33,7 @@ use Illuminate\Routing\Controller;
  *     path="/api/posts/{post}",
  *     summary="Get one post",
  *     tags={"Post"},
+ *     security={{ "bearerAuth": {} }},
  *     @OA\Parameter(
  *         description="Post ID",
  *         in="path",
@@ -59,6 +61,7 @@ use Illuminate\Routing\Controller;
  *     path="/api/posts",
  *     summary="Create post",
  *     tags={"Post"},
+ *     security={{ "bearerAuth": {} }},
  *     @OA\RequestBody(
  *         @OA\JsonContent(
  *             allOf={
@@ -80,6 +83,7 @@ use Illuminate\Routing\Controller;
  *     path="/api/posts/{post}",
  *     summary="Update post",
  *     tags={"Post"},
+ *     security={{ "bearerAuth": {} }},
  *     @OA\Parameter(
  *         description="Post ID",
  *         in="path",
@@ -109,6 +113,7 @@ use Illuminate\Routing\Controller;
  *     path="/api/posts/{post}",
  *     summary="Delete post",
  *     tags={"Post"},
+ *     security={{ "bearerAuth": {} }},
  *     @OA\Parameter(
  *         description="Post ID",
  *         in="path",
